gallery button size on mobile fix

--- a/app/less/all.less
+++ b/app/less/all.less
@@ -249,9 +249,11 @@
 	color: #fff;
 	cursor: pointer;
 	display: block;
+	height: 30px;
 	outline: none;
 	text-align: center;
 	text-decoration: none;
+	width: 30px;
 	zoom: 1;
 
 	&#backButton,
