--- a/app/less/compiled.css
+++ b/app/less/compiled.css
@@ -2357,9 +2357,11 @@ blockquote {
   color: #fff;
   cursor: pointer;
   display: block;
+  height: 30px;
   outline: none;
   text-align: center;
   text-decoration: none;
+  width: 30px;
   zoom: 1;
 }
 .fa_button#backButton,
